css/main.css
  @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');

  *{
    margin: 0;
    padding: 0;
    box-sizing: inherit;
  }

    :root { /*Reusable Variables*/
      --font-size-small: 1.8rem;
      --font-size-normal: 2.2rem;
      --font-size-medium: 2.8rem;
      --font-size-medium-1: 3.6rem;
      --font-size-large: 5.5rem;
      --font-size-huge: 7.5rem;
      --font-stack: 'Nunito Sans', sans-serif;

      --line-height-normal: 1.7;
      --line-height-small: 1.2;

      --black: #000;
      --blue: #00AAFF;
      --light-blue: #66CCFF;
      --dark-blue: #0088CC;
      --white: #ffffff;
      --grey: #CCCCCC;

      --container-max-width: 1180px;
      --container-normal-width: 800px;
      --container-medium-width: 700px; 
      --container-small-width: 500px;

      --gutter-huge: 12rem;
      --gutter-medium: 6rem;
      --gutter-normal: 3rem;
      --gutter-small-1: 2.5rem;
      --gutter-small: 2rem;

      --border-light: 1px solid rgb(36, 35, 35);
  }

  html {
    box-sizing: border-box;
    scroll-behavior: smooth;
  }

  .navbar {
      background-color: var(--grey) !important;
      font-family: 'Nunito Sans', sans-serif;
    }
  
  .navbar-nav .nav-link {
    color: black !important; /* Replace this with your desired color */
    }

  .navbar-toggler{
    color: black;
  }

  .row {
    max-width: var(--container-max-width);
    margin: 0 auto;
    justify-content: center;
}
  
  .header{
    background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
        url('../img/vancouver.jpg'); /*image from: https://photokaz.com/blog/2014/04/05/vancouver-long-exposure-black-white/*/
  }

  .body {
      font-family: 'Nunito Sans', sans-serif;
    }


  .btn-primary{
    background-color: #0088CC;
  }

  /* FOOTER */
  footer {
    background-color: #333333;
    color: #FFFFFF;
    padding: 30px 0;
    text-align: center;
    padding: var(--gutter-normal) 0 var(--gutter-normal);
  }
  
  .footer-content {
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
  }
  
  .footer-section {
    margin-bottom: 2rem;
  }
  
  .footer-section h3 {
    color: #FFFFFF;
    font-size: 20px;
    margin-bottom: 10px;
  }
  
  .footer-section p {
    font-size: 14px;
    margin-bottom: 10px;
  }
  
  .footer-section a {
    color: #FFFFFF;
    text-decoration: none;
  }
  
  .footer-bottom {
    background-color: #222222;
    padding: 10px 0;
    text-align: center;
  }
  
  .footer-bottom p {
    font-size: 12px;
    margin: 0;
  }

  .footer__social-links {
    display: flex;
    justify-content: center;
    padding:  1rem;
    list-style: none;
}

  .footer__social-link-item:not(:last-of-type) {
    margin-right: var(--gutter-small);
  }

  .footer__social-image {
    height: 2.5rem;
  }



  /* STYLE GUIDE */
  .primary-blue-bg {
    background-color: #00AAFF;
    color: #FFFFFF;
    padding: 10px;
  }

  .light-blue-bg {
    background-color: #66CCFF;
    color: #333333;
    padding: 10px;
  }

  .dark-blue-bg {
    background-color: #0088CC;
    color: #FFFFFF;
    padding: 10px;
  }

  .grey-bg {
    background-color: #CCCCCC;
    color: #333333;
    padding: 10px;
  }

  .section {
    margin-bottom: 30px;
  }

  h1{
    font-family: 'Nunito Sans', sans-serif;
    font-size: var(--font-size-huge);
    color: var(--blue);
  }

